<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="vJl-cE-6C9">
    <device id="retina4_7" orientation="portrait" appearance="light"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Example View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ExampleViewController" customModule="Example" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IHn-f3-EKg" customClass="VerticalCardSwiper" customModule="VerticalCardSwiper">
                                <rect key="frame" x="0.0" y="44" width="375" height="623"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                            </view>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                        <constraints>
                            <constraint firstItem="IHn-f3-EKg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0rk-UP-46B"/>
                            <constraint firstAttribute="bottom" secondItem="IHn-f3-EKg" secondAttribute="bottom" id="JKH-Dg-PnR"/>
                            <constraint firstItem="IHn-f3-EKg" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Lk7-Ob-zJV"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="IHn-f3-EKg" secondAttribute="trailing" id="xLb-Ol-szY"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="Z2V-KD-7Kc">
                        <leftBarButtonItems>
                            <barButtonItem title="-5" id="M9K-sE-3Gx">
                                <connections>
                                    <action selector="pressRemoveCards:" destination="BYZ-38-t0r" id="SGM-of-99T"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="+5" id="3f6-H0-hMj">
                                <connections>
                                    <action selector="pressAddCards:" destination="BYZ-38-t0r" id="e04-GM-Haz"/>
                                </connections>
                            </barButtonItem>
                        </leftBarButtonItems>
                        <rightBarButtonItems>
                            <barButtonItem title="up" image="up-arrow" id="Ek1-Zq-X5B">
                                <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="50"/>
                                <connections>
                                    <action selector="pressScrollUp:" destination="BYZ-38-t0r" id="pEo-Ui-emm"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="down" image="down-arrow" id="4IW-cO-hqd">
                                <inset key="imageInsets" minX="0.0" minY="0.0" maxX="0.0" maxY="5"/>
                                <connections>
                                    <action selector="pressScrollDown:" destination="BYZ-38-t0r" id="FWF-p5-G2u"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="right" image="right-arrow" id="skb-VA-Mjo">
                                <connections>
                                    <action selector="pressRightButton:" destination="BYZ-38-t0r" id="62p-fN-rf1"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="left" image="left-arrow" id="A8v-Zm-lWX">
                                <connections>
                                    <action selector="pressLeftButton:" destination="BYZ-38-t0r" id="2hU-Bv-uS8"/>
                                </connections>
                            </barButtonItem>
                        </rightBarButtonItems>
                    </navigationItem>
                    <connections>
                        <outlet property="cardSwiper" destination="IHn-f3-EKg" id="qo4-k3-AZN"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="476" y="138.98050974512745"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="Xdr-EY-6So">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vJl-cE-6C9" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="UrB-sa-k0Q">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="4XM-Kj-oZb"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="M9f-0L-HgK" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-340" y="139"/>
        </scene>
    </scenes>
    <resources>
        <image name="down-arrow" width="22" height="22"/>
        <image name="left-arrow" width="22" height="22"/>
        <image name="right-arrow" width="22" height="22"/>
        <image name="up-arrow" width="22" height="22"/>
    </resources>
</document>
